[gd_scene load_steps=8 format=3 uid="uid://b83kdwaj8oq22"]

[ext_resource type="Texture2D" uid="uid://mjrnddul32mg" path="res://Assets/blackjack_table.jpg" id="1_kln2b"]
[ext_resource type="Script" uid="uid://ullx8sugpywi" path="res://Scripts/Deck.gd" id="1_r150o"]
[ext_resource type="Script" uid="uid://c8d437qi0g3yw" path="res://Scripts/GameMenager.gd" id="1_rgh2o"]
[ext_resource type="Script" uid="uid://15p3n7psfkfu" path="res://Scripts/Hand.gd" id="2_idj7w"]
[ext_resource type="PackedScene" uid="uid://dprnekhrwgviu" path="res://Scenes/Hand.tscn" id="4_jw32o"]
[ext_resource type="Script" uid="uid://cxemw5l14ssw" path="res://Scripts/UI.gd" id="5_pbw6q"]
[ext_resource type="PackedScene" uid="uid://mqpq7jhwb4tc" path="res://Scenes/Card.tscn" id="5_v1gob"]

[node name="Main" type="Node2D"]
script = ExtResource("1_rgh2o")

[node name="Background" type="TextureRect" parent="."]
offset_right = 976.0
offset_bottom = 645.0
texture = ExtResource("1_kln2b")

[node name="Deck" type="Node2D" parent="."]
script = ExtResource("1_r150o")

[node name="Player" type="Node2D" parent="."]
position = Vector2(487, 544)

[node name="Hand" parent="Player" instance=ExtResource("4_jw32o")]
position = Vector2(0, 20)

[node name="Dealer" type="Node2D" parent="."]
position = Vector2(498, 105)

[node name="Hand" type="Node2D" parent="Dealer"]
position = Vector2(-1, -35)
script = ExtResource("2_idj7w")
card_scene = ExtResource("5_v1gob")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("5_pbw6q")

[node name="BetLabel" type="Label" parent="UI"]
offset_right = 40.0
offset_bottom = 23.0

[node name="PlayButton" type="Button" parent="UI"]
offset_left = 1018.0
offset_top = 18.0
offset_right = 1118.0
offset_bottom = 72.0
text = "PLAY
"

[node name="VBC_Buttons2" type="VBoxContainer" parent="UI"]
offset_left = 1018.0
offset_top = 105.0
offset_right = 1118.0
offset_bottom = 255.0
theme_override_constants/separation = 8

[node name="HitButton" type="Button" parent="UI/VBC_Buttons2"]
layout_mode = 2
text = "Hit
"

[node name="StandButton" type="Button" parent="UI/VBC_Buttons2"]
layout_mode = 2
text = "Stand
"

[node name="SplitButton" type="Button" parent="UI/VBC_Buttons2"]
layout_mode = 2
text = "Split"

[node name="DoubleButton" type="Button" parent="UI/VBC_Buttons2"]
layout_mode = 2
text = "Double"

[node name="VBC_Betting" type="VBoxContainer" parent="UI"]
offset_left = 984.0
offset_top = 298.0
offset_right = 1140.0
offset_bottom = 445.0
theme_override_constants/separation = 15

[node name="TokenLabel" type="Label" parent="UI/VBC_Betting"]
layout_mode = 2
text = "Tokens:"

[node name="BetLabel" type="Label" parent="UI/VBC_Betting"]
layout_mode = 2
text = "Amount:"

[node name="BetSlider" type="HSlider" parent="UI/VBC_Betting"]
layout_mode = 2

[node name="ConfirmBetButton" type="Button" parent="UI/VBC_Betting"]
layout_mode = 2
text = "Confirm"

[node name="ResultLabel" type="Label" parent="UI"]
visible = false
offset_left = 440.0
offset_top = 338.0
offset_right = 480.0
offset_bottom = 361.0

[connection signal="pressed" from="UI/PlayButton" to="." method="start_game"]
[connection signal="pressed" from="UI/VBC_Buttons2/HitButton" to="." method="_on_hit_button_pressed"]
[connection signal="pressed" from="UI/VBC_Buttons2/StandButton" to="." method="_on_stand_button_pressed"]
[connection signal="pressed" from="UI/VBC_Buttons2/SplitButton" to="." method="_on_split_button_pressed"]
[connection signal="pressed" from="UI/VBC_Buttons2/DoubleButton" to="." method="_on_double_button_pressed"]
[connection signal="value_changed" from="UI/VBC_Betting/BetSlider" to="." method="_on_bet_slider_value_changed"]
[connection signal="pressed" from="UI/VBC_Betting/ConfirmBetButton" to="." method="_on_confirm_bet_button_pressed"]
